// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component Hero component with keyline renders level 0 with keyline 1`] = `
<div>
  <div
    class="Hero-root-170 Hero-slim-171 Hero-carousel-172 Hero-keyline-173"
    data-test-class-name="Hero"
  >
    <div
      class="Container-root-189"
    >
      <div
        class="MuiContainer-root Hero-container-175 MuiContainer-maxWidthXl"
      >
        <div
          class="Hero-wrapper-176"
        >
          <div
            class="Carousel-wrapper-195"
          >
            <div
              class="Carousel-root-191 Carousel-opacity-198 Carousel-swipable-200"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="Carousel-page-194"
                    >
                      <div
                        class="Carousel-slide-192"
                        data-test-class-name="slide"
                        style="width: 100%;"
                      >
                        <div
                          class="Hero-content-177"
                        >
                          <h1
                            class="MuiTypography-root Hero-title-178 Typography-root-201 Typography-underline-203 Typography-darkBg-204 MuiTypography-h1"
                            data-testid="typography"
                          >
                            Title
                          </h1>
                          <div
                            class="Hero-text-179"
                            data-test-class-name="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="SlideControls-root-209 SlideControls-light-222 SlideControls-hide-212 Hero-controls-181"
          >
            <span
              class="SlideControls-middleContainer-214"
            >
              <span
                class="SlideControls-slidingSlot-213"
              >
                <span
                  class="SlideControls-numbers-216"
                >
                  <span
                    class="SlideControls-number-221 SlideControls-active-220"
                  >
                    01
                  </span>
                </span>
              </span>
              <span
                class="SlideControls-total-219"
              >
                01
              </span>
            </span>
          </div>
          <div
            class="Hero-children-182"
          />
        </div>
      </div>
    </div>
    <div
      class="Hero-imageCarousel-183"
    >
      <div
        class="Carousel-wrapper-195"
      >
        <div
          class="Carousel-root-191 Carousel-swipable-200"
          data-testid="carousel"
        >
          <div
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
            >
              <div
                aria-hidden="false"
                class="Carousel__slide--global"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  class="Carousel-page-194"
                >
                  <div
                    class="Carousel-slide-192"
                    data-test-class-name="slide"
                    style="width: 100%;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component Hero component with keyline renders level 1 with keyline  1`] = `
<div>
  <div
    class="Hero-root-141 Hero-keyline-144 Hero-light-156 Hero-slim-142 Hero-lvl3-159 Hero--lvl-3"
  >
    <div
      class="Container-root-160"
    >
      <div
        class="MuiContainer-root Hero-container-146 MuiContainer-maxWidthXl"
      >
        <div
          class="Hero-wrapper-147"
        >
          <div
            class="Hero-content-148"
          >
            <h1
              class="MuiTypography-root Hero-title-149 Typography-root-162 Typography-underline-164 MuiTypography-h1"
              data-testid="typography"
            >
              H1 Heading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component Hero component with keyline renders with no underline 1`] = `
<div>
  <div
    class="Hero-root-227 Hero-slim-228 Hero-carousel-229 Hero-keyline-230"
    data-test-class-name="Hero"
  >
    <div
      class="Container-root-246"
    >
      <div
        class="MuiContainer-root Hero-container-232 MuiContainer-maxWidthXl"
      >
        <div
          class="Hero-wrapper-233"
        >
          <div
            class="Carousel-wrapper-252"
          >
            <div
              class="Carousel-root-248 Carousel-opacity-255 Carousel-swipable-257"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="Carousel-page-251"
                    >
                      <div
                        class="Carousel-slide-249"
                        data-test-class-name="slide"
                        style="width: 100%;"
                      >
                        <div
                          class="Hero-content-234"
                        >
                          <h1
                            class="MuiTypography-root Hero-title-235 Typography-root-258 MuiTypography-h1"
                            data-testid="typography"
                          >
                            Title
                          </h1>
                          <div
                            class="Hero-text-236"
                            data-test-class-name="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="SlideControls-root-266 SlideControls-light-279 SlideControls-hide-269 Hero-controls-238"
          >
            <span
              class="SlideControls-middleContainer-271"
            >
              <span
                class="SlideControls-slidingSlot-270"
              >
                <span
                  class="SlideControls-numbers-273"
                >
                  <span
                    class="SlideControls-number-278 SlideControls-active-277"
                  >
                    01
                  </span>
                </span>
              </span>
              <span
                class="SlideControls-total-276"
              >
                01
              </span>
            </span>
          </div>
          <div
            class="Hero-children-239"
          />
        </div>
      </div>
    </div>
    <div
      class="Hero-imageCarousel-240"
    >
      <div
        class="Carousel-wrapper-252"
      >
        <div
          class="Carousel-root-248 Carousel-swipable-257"
          data-testid="carousel"
        >
          <div
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
            >
              <div
                aria-hidden="false"
                class="Carousel__slide--global"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  class="Carousel-page-251"
                >
                  <div
                    class="Carousel-slide-249"
                    data-test-class-name="slide"
                    style="width: 100%;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders level 1 1`] = `
<div>
  <div
    class="Hero-root-1 Hero-lvl1-17 Hero--lvl-1"
  >
    <div
      class="Container-root-20"
    >
      <div
        class="MuiContainer-root Hero-container-6 MuiContainer-maxWidthXl"
      >
        <div
          class="Hero-wrapper-7"
        >
          <div
            class="Hero-content-8"
          >
            <h1
              class="MuiTypography-root Hero-title-9 Typography-root-22 Typography-underline-24 Typography-darkBg-25 MuiTypography-h1"
              data-testid="typography"
            >
              H1 Heading
            </h1>
            <div
              class="Hero-text-10"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
            </div>
          </div>
        </div>
      </div>
    </div>
    <img
      alt="Lorem ipsum"
      class="Hero-image-15 Media-root-30"
      src="path-to-image"
    />
  </div>
</div>
`;

exports[`Hero component renders level 1 with CTA 1`] = `
<div>
  <div
    class="Hero-root-32 Hero-lvl1-48 Hero--lvl-1"
  >
    <div
      class="Container-root-51"
    >
      <div
        class="MuiContainer-root Hero-container-37 MuiContainer-maxWidthXl"
      >
        <div
          class="Hero-wrapper-38"
        >
          <div
            class="Hero-content-39"
          >
            <h1
              class="MuiTypography-root Hero-title-40 Typography-root-53 Typography-underline-55 Typography-darkBg-56 MuiTypography-h1"
              data-testid="typography"
            >
              H1 Heading
            </h1>
            <div
              class="Hero-text-41"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root Button-root-61 MuiButton-outlined Button-outlinedDarkBg-67 Hero-cta-42 MuiButton-outlinedPrimary"
              label="CTA action"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label Button-label-64"
              >
                CTA action
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <img
      alt="Lorem ipsum"
      class="Hero-image-46 Media-root-81"
      src="path-to-image"
    />
  </div>
</div>
`;

exports[`Hero component renders level 2 1`] = `
<div>
  <div
    class="Hero-root-83 Hero-slim-84 Hero-lvl2-100 Hero--lvl-2"
  >
    <div
      class="Container-root-102"
    >
      <div
        class="MuiContainer-root Hero-container-88 MuiContainer-maxWidthXl"
      >
        <div
          class="Hero-wrapper-89"
        >
          <div
            class="Hero-content-90"
          >
            <h1
              class="MuiTypography-root Hero-title-91 Typography-root-104 Typography-underline-106 Typography-darkBg-107 MuiTypography-h1"
              data-testid="typography"
            >
              H1 Heading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders level 3 1`] = `
<div>
  <div
    class="Hero-root-112 Hero-light-127 Hero-slim-113 Hero-lvl3-130 Hero--lvl-3"
  >
    <div
      class="Container-root-131"
    >
      <div
        class="MuiContainer-root Hero-container-117 MuiContainer-maxWidthXl"
      >
        <div
          class="Hero-wrapper-118"
        >
          <div
            class="Hero-content-119"
          >
            <h1
              class="MuiTypography-root Hero-title-120 Typography-root-133 Typography-underline-135 MuiTypography-h1"
              data-testid="typography"
            >
              H1 Heading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
